syntax = "proto3";

//определяет просто пространтсво имён, чтобы не было конфликтов
//package unifi_v1;
package api.unifi_v1;

//import "google/protobuf/timestamp.proto";

//We are essentially saying the Protobuf compiler where we want to put the generated stubs
option go_package = "github.com/deniskaponchik/GoSoft/pkg/grpc/unifi/v1";

service GetAnomalies{
  rpc GetClient(ClientRequest) returns (ClientResponse);
  //rpc GetAp(ApRequest) returns (ApResponse);
}
message ClientRequest {
  string hostname = 1;
}

message ClientResponse{
  string hostname = 1;
  string error = 2;
  //ClientInfo info = 2;
  repeated Anomaly anomalies = 3;
}
message Anomaly {
  string apName = 1;
  string dateHour = 2;
  //google.protobuf.Timestamp date_hour = 2;
  //repeated AnomalyString sliceAnomStr = 3;
  repeated string anomStr = 3;
}

/*
service Ap{}
message ApRequest{
  string hostname = 1;
  Anomaly anomalies = 2;
}
message ApResponse{}
*/